# azugate

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.yaml  go.mod  go.sum
binding/: config_wrapper.cc  config_wrapper.h
cmd/azugate/: main.go
core/: CMakeLists.txt  Makefile  build_azugate.sh  makefile  vcpkg.json
core/binding/: azugate.cc  azugate.h  binding.go
core/include/: auth.h  common.hpp  compression.hpp  config.h  crequest.h  dispatcher.h  filter.h  http_parser.h  log.h  network_wrapper.hpp  protocols.h  rate_limiter.h  router.h  server.hpp  services.hpp  string_op.h
core/src/: config.cc  dispatcher.cc  filter.cc  http_parser.cc  log.cc  rate_limitor.cc  router.cc  string_op.cc
core/src/app/: azugate.cc
core/src/common/: auth.cc  compression.cc  config.cc  crequest.cc  dispatcher.cc  filter.cc  router.cc
include/: config.h  worker.hpp
internal/cgo/: config.go  config_wrapper.h
internal/config/: config.go
internal/idp/oauth2/: oauth.go
misc/: Dockerfile
src/app/: azugate.cc
